# pos_app

./: .env  0029_fix_stock_count_sessions_counted_by.sql.bak  ANALYTICS_UPGRADE_PLAN.md  AUDIT_REPORT.md  CLAUDE.md  POS_APP_REVIEW.md  QUANTUM_POS_APP_SERVICES_GAP_REPORT.md  QUANTUM_POS_APP_SERVICES_GAP_REPORT_PROGRESS.md  SYNC_AND_ONBOARDING_WORKFLOW.md  SYNC_PROMPT.md  TRANSACTION_DESIGN.md  eslint.config.js  fix_migration_checksums.sql  fix_migrations.ps1  index.html  items_export_2026-03-26 new.xlsx  jsconfig.json  package.json  pnpm-lock.yaml  pos_module_audit.html  stock-type-audit.md  tailwind.config.js  update.md  vite.config.js
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_roles_permissions.sql  0002_stores.sql  0003_users.sql  0004_departments_categories.sql  0005_items.sql  0006_customers_suppliers.sql  0007_transactions.sql  0008_payments.sql  0009_purchase_orders.sql  0010_shifts.sql  0011_credit_sales.sql  0012_expenses.sql  0013_audit_receipts.sql  0014_stock_count.sql  0015_tax_categories.sql  0016_returns.sql  0017_cash_movements.sql  0018_receipt_settings.sql  0019_login_history.sql  0020_price_management.sql  0021_bulk_operations.sql  0022_fix_admin_password.sql  0023_admin_shifts_read_permission.sql  0024_enrich_domains.sql  0025_extend_departments_categories.sql  0026_add_store_code.sql  0027_align_schema.sql  0028_transaction_columns.sql  0030_align_shifts.sql  0031_fix_cashier_id.sql  0032_extend_receipt_settings.sql  0033_align_remaining_domains.sql  0034_align_all_commands.sql  0035_reorder_alerts.sql  0036_stock_transfers.sql  0037_eod_reports.sql  0038_store_settings.sql  0039_loyalty.sql  0040_notifications.sql  0041_supplier_payments.sql  (+48 more)
src-tauri/src/: error.rs  http_server.rs  lib.rs  state.rs
src-tauri/src/commands/: analytics.rs  app.rs  audit.rs  auth.rs  backup.rs  bulk_operations.rs  cash_movements.rs  categories.rs  cloud_sync.rs  credit_sales.rs  customer_wallet.rs  customers.rs  departments.rs  eod.rs  excel.rs  expense_categories.rs  expenses.rs  fx_rates.rs  inventory.rs  items.rs  labels.rs  loyalty.rs  mod.rs  notifications.rs  number_series.rs  onboarding.rs  payment_methods.rs  payments.rs  pos_favourites.rs  pos_shortcuts_settings.rs  price_management.rs  price_scheduling.rs  printer.rs  purchase_orders.rs  receipts.rs  reorder_alerts.rs  returns.rs  security.rs  shifts.rs  stock_transfers.rs  (+8 more)
src-tauri/src/database/: mod.rs  pool.rs  sync.rs
src-tauri/src/models/: analytics.rs  audit.rs  auth.rs  backup.rs  bulk_operations.rs  cash_movement.rs  category.rs  credit_sale.rs  customer.rs  customer_wallet.rs  department.rs  eod_report.rs  expense.rs  expense_category.rs  fx_rates.rs  inventory.rs  item.rs  label.rs  loyalty.rs  mod.rs  notification.rs  number_series.rs  pagination.rs  payment.rs  payment_method_settings.rs  pos_favourites.rs  pos_shortcuts_settings.rs  price.rs  price_scheduling.rs  purchase_order.rs  receipt.rs  reorder_alert.rs  returns.rs  security.rs  shift.rs  stock_transfer.rs  store.rs  store_hours.rs  store_settings.rs  supplier.rs  (+4 more)
src-tauri/src/utils/: crypto.rs  filters.rs  jwt.rs  mod.rs  (+3 more)
(+308 files in other folders)
